[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="1"]

[node name="PauseMenu" type="Control"]
anchor_right = 0.3
anchor_bottom = 0.5
script = ExtResource("1")
visible = false

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 16
custom_constants/margin_top = 16
custom_constants/margin_right = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
size_flags_vertical = 3
separation = 12

[node name="ResumeButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
text = "Resume"

[node name="SettingsButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
text = "Settings"

[node name="ControlsButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
text = "Controls"

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
text = "Quit to Desktop"
